--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body {
 /* 仔入畫面 */
 /* *********************************************************** */
 
-@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600,700,900,300,200);
+/* @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600,700,900,300,200); */
 body::after {
   content: "";
   position: absolute;
@@ -917,7 +917,7 @@ body #wrap h1 {
   font-family: "Bogart-Semibold";
   font-family: "Chakra Petch", sans-serif;
   color: transparent;
-  font-size: 100px;
+  font-size: 10rem;
   position: relative;
   width: 100%;
   line-height: 0.9;
@@ -1217,7 +1217,7 @@ body #wrap .panel h2 {
   grid-area: 3/1/4/4;
   font-family: "Bogart-Semibold";
   font-family: "Noto Serif JP", serif;
-  font-size: 64px;
+  font-size: 6.4rem;
   position: relative;
   z-index: 3;
   color: transparent;
