--- a/css/queries.css
+++ b/css/queries.css
@@ -87,6 +87,10 @@ rgb(198, 210, 123)
     font-size: 4.8rem;
   }
 
+  body #wrap h1 span.word {
+    transform: translateY(calc((var(--progress) * 400px) - 200px));
+  }
+
   .img-1 {
     width: 35rem;
     top: -10%;
@@ -122,13 +126,18 @@ rgb(198, 210, 123)
     background-color: #e6e5e1;
   }
 
+  .container-1 .ticket-card p {
+    right: 3.5rem;
+    font-size: 0.6rem;
+  }
+
   .container-1 .ticket-card h2 {
     right: 6.5rem;
     font-size: 3rem;
   }
 
-  body #wrap h1 span.word {
-    transform: translateY(calc((var(--progress) * 400px) - 200px));
+  .container-1 .ticket-card button {
+    width: 1.5rem;
   }
 
   body #find {
@@ -153,6 +162,10 @@ rgb(198, 210, 123)
   }
 
   body #wrap h1 {
-    font-size: 3.8rem;
+    font-size: 4.2rem;
+  }
+
+  body #wrap p.subhead {
+    font-size: 1.2rem;
   }
 }
