--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,11 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  /* align-items: end; */
   flex-direction: column;
+  padding: 4.8rem 0;
+  position: relative;
 }
 
 .text-center {
@@ -114,7 +116,7 @@ body::after {
   background-size: 3px 3px;
   mix-blend-mode: multiply;
   z-index: -2;
-  height: 200%;
+  height: 400%;
 }
 
 body {
@@ -1432,9 +1434,10 @@ body #wrap .panel:nth-of-type(even) .thumb {
     grid-area: 2/1/5/6;
   }
 }
-body #wrap .panel:nth-of-type(even) .thumb p {
+/* body #wrap .panel:nth-of-type(even) .thumb p {
   top: -50px;
-}
+} */
+
 body #wrap .panel .thumb {
   grid-area: 2/3/5/6;
   position: relative;
@@ -1473,10 +1476,10 @@ body #wrap .panel .thumb .inner {
 
 body #wrap .panel .thumb .about {
   position: absolute;
-  font-size: 4.8rem;
-  top: 70%;
+  font-size: 9.6rem;
+  top: 60%;
   left: 20%;
-  color: #e5eeeb;
+  /* color: #e5eeeb; */
   font-family: "Amatic SC", sans-serif;
 }
 
@@ -1620,6 +1623,30 @@ body #wrap .panel .thumb img.lighter {
   transform: translateY(calc(250px - (var(--progress) * 450px)));
 }
 
+.img-2 {
+  position: absolute;
+  top: 75%;
+  left: 5%;
+  z-index: 3;
+  pointer-events: none;
+  /* backdrop-filter: ; */
+  /* transform: translateY(calc(250px - (var(--progress) * 450px))); */
+}
+
+body #wrap .panel .thumb .house {
+  position: absolute;
+  font-size: 9.6rem;
+  top: 60%;
+  left: -5%;
+  /* color: #e5eeeb; */
+  font-family: "Amatic SC", sans-serif;
+}
+
+body #wrap .panel .thumb:hover .house {
+  color: #ffffff;
+  text-shadow: 1px 1px 10px #00ffae;
+}
+
 body #wrap .title {
   position: relative;
 }
@@ -1640,6 +1667,36 @@ body #find {
 /* ************************************************** */
 /* ticket */
 /* ************************************************** */
+
+body #wrap-1 {
+  display: block;
+  width: 1000px;
+  max-width: 85vw;
+  margin: 0px auto;
+  transition: 0.5s cubic-bezier(1, 0.885, 0.32, 1);
+  transform: translateX(0%);
+  transition-delay: 0.75s;
+  transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  will-change: transform;
+  /* overflow: hidden; */
+  position: relative;
+  box-sizing: border-box;
+  background-image: url(../img/sky.jpg);
+  background-attachment: fixed;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+body #wrap-1 .ticket {
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: brightness(50%); /* 亮度效果 */
+  -webkit-backdrop-filter: brightness(50%);
+  backdrop-filter: invert(10%) blur(10px) hue-rotate(320deg) sepia(90%); /* 色相旋轉 */
+  -webkit-backdrop-filter: invert(70%) blur(10px) hue-rotate(320deg) sepia(90%);
+}
 
 i {
   opacity: 0;
@@ -1663,6 +1720,9 @@ h2 {
   background-color: #fff;
   overflow: hidden;
   margin-bottom: 0.4rem;
+  transform: rotate(3deg);
+  margin: 2.4rem 0;
+  box-shadow: 0 0 10px #000;
 }
 .container-1 .ticket-card:before {
   content: "";
@@ -1674,7 +1734,7 @@ h2 {
   width: 1.6rem;
   height: 1.6rem;
   border-radius: 1.6rem;
-  background-color: #e6e5e1;
+  background-color: #000000;
 }
 .container-1 .ticket-card:after {
   content: "";
@@ -1686,7 +1746,7 @@ h2 {
   width: 1.6rem;
   height: 1.6rem;
   border-radius: 1.6rem;
-  background-color: #e6e5e1;
+  background-color: #000000;
 }
 .container-1 .ticket-card ul {
   z-index: 99;
@@ -1708,7 +1768,7 @@ h2 {
   position: absolute;
   bottom: 0;
   right: 13rem;
-  font-size: 6rem;
+  font-size: 4rem;
   font-weight: 700;
   color: #fff;
 }
