--- a/css/style.css
+++ b/css/style.css
@@ -1640,6 +1640,7 @@ body #wrap .panel .thumb .house {
   left: -5%;
   /* color: #e5eeeb; */
   font-family: "Amatic SC", sans-serif;
+  z-index: 3;
 }
 
 body #wrap .panel .thumb:hover .house {
@@ -1877,4 +1878,83 @@ h2 {
   bottom: 16px;
   right: 16px;
   width: 100px;
+}
+
+/* 菜單 */
+
+.line,
+.box {
+  transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.line {
+  height: 8px;
+  width: 45px;
+  background: #a58725;
+  margin: 5px auto;
+}
+
+.box {
+  width: 10px;
+  height: 10px;
+  background: #a58725;
+  margin: 3px 3px;
+  display: inline-block;
+}
+
+.menu__wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+.menu__wrapper > div {
+  width: 60px;
+  height: 60px;
+  padding: 3px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.menu__wrapper > div:hover,
+.menu__wrapper > div:focus {
+  outline: none;
+}
+.menu__wrapper > span {
+  display: inline-block;
+  text-align: center;
+  line-height: 1.2;
+  padding: 20px;
+  margin-top: auto;
+}
+
+.menu__item--hamburger:hover .line:nth-child(2),
+.menu__item--hamburger:focus .line:nth-child(2) {
+  visibility: hidden;
+}
+
+.menu__item--doner {
+  flex-direction: column;
+}
+.menu__item--doner .line:nth-child(2) {
+  width: 32px;
+}
+.menu__item--doner .line:nth-child(3) {
+  width: 20px;
+}
+.menu__item--doner:hover .line:nth-child(1),
+.menu__item--doner:focus .line:nth-child(1) {
+  transform: rotate(45deg) translate(12px, 12px);
+}
+.menu__item--doner:hover .line:nth-child(2),
+.menu__item--doner:focus .line:nth-child(2) {
+  width: 20px;
+  transform: rotate(-45deg) translate(-12px, -1.5px);
+}
+.menu__item--doner:hover .line:nth-child(3),
+.menu__item--doner:focus .line:nth-child(3) {
+  transform: rotate(-45deg) translate(25px, -14px);
 }
