--- a/css/queries.css
+++ b/css/queries.css
@@ -159,6 +159,81 @@ rgb(198, 210, 123)
   body #wrap {
     padding: 2.5vh 50px 8vh;
   }
+
+  .dice-container {
+    right: 2.5%;
+  }
+
+  /* 菜單 */
+
+  .line,
+  .box {
+    transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+
+  .line {
+    height: 4px;
+    width: 22.5px;
+    background: #a58725;
+    margin: 2.5px auto;
+  }
+
+  .menu__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+  }
+  .menu__wrapper > div {
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+  .menu__wrapper > div:hover,
+  .menu__wrapper > div:focus {
+    outline: none;
+  }
+  .menu__wrapper > span {
+    display: inline-block;
+    text-align: center;
+    line-height: 1.2;
+    padding: 10px;
+    margin-top: auto;
+  }
+
+  .menu__item--hamburger:hover .line:nth-child(2),
+  .menu__item--hamburger:focus .line:nth-child(2) {
+    visibility: hidden;
+  }
+
+  .menu__item--doner {
+    flex-direction: column;
+  }
+  .menu__item--doner .line:nth-child(2) {
+    width: 16px;
+  }
+  .menu__item--doner .line:nth-child(3) {
+    width: 10px;
+  }
+  .menu__item--doner:hover .line:nth-child(1),
+  .menu__item--doner:focus .line:nth-child(1) {
+    transform: rotate(45deg) translate(6px, 6px);
+  }
+  .menu__item--doner:hover .line:nth-child(2),
+  .menu__item--doner:focus .line:nth-child(2) {
+    width: 10px;
+    transform: rotate(-45deg) translate(-6px, -0.75px);
+  }
+  .menu__item--doner:hover .line:nth-child(3),
+  .menu__item--doner:focus .line:nth-child(3) {
+    transform: rotate(-45deg) translate(12.5px, -7px);
+  }
 }
 
 @media (max-width: 25em) {
